--- a/package.json
+++ b/package.json
@@ -9,6 +9,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.0"
+    "@analogjs/astro-angular": "^2.1.1",
+    "@angular/animations": "^21.0.1",
+    "@angular/build": "^21.0.0",
+    "@angular/common": "^21.0.1",
+    "@angular/compiler": "^21.0.1",
+    "@angular/compiler-cli": "^21.0.1",
+    "@angular/core": "^21.0.1",
+    "@angular/language-service": "^21.0.1",
+    "@angular/platform-browser": "^21.0.1",
+    "@angular/platform-server": "^21.0.1",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/three": "^0.181.0",
+    "astro": "^5.16.0",
+    "gsap": "^3.13.0",
+    "rxjs": "^7.8.2",
+    "tailwindcss": "^4.1.17",
+    "three": "^0.181.2",
+    "three-stdlib": "^2.36.1",
+    "tslib": "^2.8.1"
   }
 }
