--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/three": "^0.181.0",
     "astro": "^5.16.0",
+    "audit": "^0.0.6",
     "gsap": "^3.13.0",
     "rxjs": "^7.8.2",
     "tailwindcss": "^4.1.17",
